# desiGANer

./: .gitignore  main.py  pyproject.toml
fashion-gan/: README.md  app.py  train.py  training_metrics.txt  utils.py
fashion-gan/checkpoints/: generator_best.pt
fashion-gan/models/: discriminator.py  generator.py
fashion-gan/models/best/: generator_best.pt
